--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -21,7 +21,6 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "esbuild": "0.25.11",
     "@eslint/js": "^9.37.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.18.6",
@@ -31,6 +30,7 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
+    "esbuild": "0.25.11",
     "eslint": "^9.37.0",
     "eslint-plugin-vue": "^10.5.0",
     "globals": "^16.4.0",
@@ -38,6 +38,7 @@
     "npm-run-all2": "^8.0.4",
     "prettier": "^3.6.2",
     "prettier-eslint": "^16.4.2",
+    "sass": "^1.94.0",
     "typescript": "~5.9.0",
     "typescript-eslint": "^8.46.0",
     "vite": "^7.1.7",
