--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -16,12 +16,15 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@quasar/extras": "^1.17.0",
     "pinia": "^3.0.3",
+    "quasar": "^2.18.6",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
+    "@quasar/vite-plugin": "^1.10.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.18.6",
     "@typescript-eslint/parser": "^8.46.0",
@@ -39,10 +42,11 @@
     "prettier": "^3.6.2",
     "prettier-eslint": "^16.4.2",
     "sass": "^1.94.0",
+    "sass-embedded": "^1.93.3",
     "typescript": "~5.9.0",
     "typescript-eslint": "^8.46.0",
     "vite": "^7.1.7",
-    "vite-plugin-vue-devtools": "^8.0.2",
+    "vite-plugin-vue-devtools": "^8.0.3",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.1.0"
   }
