--- a/services/users/keycloak-docker/docker-compose.yml
+++ b/services/users/keycloak-docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   postgres-keycloak:
     image: postgres:15
@@ -13,7 +11,7 @@ services:
     networks:
       - eventonight-network
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "keycloak"]
+      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER}"]
       interval: 5s
       retries: 5
       timeout: 5s
@@ -38,17 +36,17 @@ services:
       KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
 
     ports:
-      - "8082:8080"
+      - "${KEYCLOAK_PORT}:8080"
     depends_on:
       postgres-keycloak:
         condition: service_healthy
     networks:
       - eventonight-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8080/auth/realms/master || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8080/realms/master || exit 1"]
       interval: 5s
       retries: 20
-      start_period: 10s  
+      start_period: 10s
 
 volumes:
   keycloak-postgres-data:
