chore(clean-code): apply new rules to scalafix and scalafmt

--- a/services/events/.scalafmt.conf
+++ b/services/events/.scalafmt.conf
@@ -12,3 +12,10 @@ docstrings {
   removeEmpty = true
   wrap = no
 }
+
+rewrite.rules = [
+  PreferCurlyFors
+]
+
+rewrite.scala3.convertToNewSyntax = true
+rewrite.scala3.removeOptionalBraces = true
