--- a/services/events/.scalafix.conf
+++ b/services/events/.scalafix.conf
@@ -3,9 +3,21 @@ rules = [
   RemoveUnused
   OrganizeImports
   RedundantSyntax
+  ExplicitResultTypes
 ]
+
+ExplicitResultTypes {
+  memberKind = [Def, Val, Var]
+  memberVisibility = [Public, Protected]
+  skipLocalImplicits = false
+  skipSimpleDefinitions = []
+  rewriteStructuralTypesToNamedSubclass = true
+  fetchScala3CompilerArtifactsOnVersionMismatch = true
+}
 
 DisableSyntax.noThrows = true
 DisableSyntax.noNulls = false
 DisableSyntax.noReturns = true
 DisableSyntax.noAsInstanceOf = true
+
+scala.version = "3.7"
