--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,14 @@ TRAEFIK_SERVICE_PORT=80
 TRAEFIK_SECURE_SERVICE_PORT=443
 EVENTS_SERVICE_PORT=9010
 USERS_SERVICE_PORT=9000
+
+# PostgreSQL
+POSTGRES_USER=keycloak
+POSTGRES_PASSWORD=
+
+# Keycloak
+KC_DB_USERNAME=keycloak
+KC_DB_PASSWORD=
+KEYCLOAK_ADMIN=admin
+KEYCLOAK_ADMIN_PASSWORD=
+KEYCLOAK_PORT=8082
