refactor(keycloak): improve Keycloak setup and docker-compose configuration
- Switch to automatic realm import integrated with Keycloak startup.
- Update Dockerfile COPY paths for start.sh and realm.
- Rename docker-compose file from .yml to .yaml.
- Move Postgres and Keycloak to 'keycloak-network', keep Keycloak on 'eventonight-network'.
- Add docker-compose-dev.yaml for automatic Keycloak image build.
- Update Keycloak image to GHCR latest in docker-compose.yaml.

--- a/infrastructure/authentication/Dockerfile
+++ b/infrastructure/authentication/Dockerfile
@@ -1,7 +1,7 @@
 FROM quay.io/keycloak/keycloak:21.1.1
 
-COPY start.sh /opt/keycloak/start.sh
+COPY ./infrastructure/authentication/start.sh /opt/keycloak/start.sh
 
-COPY realm /opt/keycloak/realm
+COPY ./infrastructure/authentication/realm /opt/keycloak/data/import
 
 ENTRYPOINT ["/opt/keycloak/start.sh"]
