feat(keycloak): switch from dev mode to simulated production mode
- Replace dev mode start command with production start command.
- Add KC_HOSTNAME to .env.template and use it in docker-compose.

--- a/infrastructure/authentication/docker-compose.yaml
+++ b/infrastructure/authentication/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       KC_DB_PASSWORD: ${KC_DB_PASSWORD}
       KC_DB_SCHEMA: public
       KC_HTTP_ENABLED: "true"
-      KC_HOSTNAME: localhost
+      KC_HOSTNAME: ${KC_HOSTNAME}
       KC_LOGLEVEL: INFO
       KC_METRICS_ENABLED: "true"
       KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN}
