--- a/.env.template
+++ b/.env.template
@@ -13,6 +13,7 @@ POSTGRES_PASSWORD=
 # Keycloak
 KC_DB_USERNAME=keycloak
 KC_DB_PASSWORD=
+KC_HOSTNAME=localhost
 KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=
 KEYCLOAK_PORT=8082
