feat(updateEvent): implement domainEvent for update
convert media build.gradle in kotlin, implement updateDomainEvent, reorganized service in events

--- a/docs/openAPI/openapi/events.yaml
+++ b/docs/openAPI/openapi/events.yaml
@@ -187,5 +187,5 @@ paths:
                   {"category": "VenueType", "tags": ["Club", "Bar"]}
                 ]
       tags: 
-        - Event Tag API          
+        - Event Tag Routes     
   
