feat(keycloak): create 'users-service' client in 'eventonight' realm with configurable secret
- Add provision.sh to manage 'users-service' client and secret.
- Add Dockerfile-keycloak-provision to build custom Keycloak image including provision.sh.
- Add 'keycloak-provision' container in docker-compose.yaml.
- Add USERS_SERVICE_SECRET to .env.template.
- Update 'keycloak' container healthcheck.

--- a/infrastructure/authentication/docker-compose.yaml
+++ b/infrastructure/authentication/docker-compose.yaml
@@ -41,10 +41,26 @@ services:
       - eventonight-network
       - keycloak-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8080/realms/master || exit 1"]
+      test: ["CMD-SHELL", "timeout 2 bash -c '</dev/tcp/localhost/8080' || exit 1"]
       interval: 5s
+      timeout: 5s
       retries: 20
-      start_period: 10s
+      start_period: 600s
+
+  keycloak-provision:
+    build:
+      context: .
+      dockerfile: ./infrastructure/authentication/Dockerfile-keycloak-provision
+    container_name: keycloak-provision
+    environment:
+      KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN}
+      KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
+      USERS_SERVICE_SECRET: ${USERS_SERVICE_SECRET}
+    depends_on:
+      keycloak:
+        condition: service_healthy
+    networks:
+      - keycloak-network
 
 volumes:
   keycloak-postgres-data:
