chore(users): wait for 'keycloak-provision' to complete before starting

--- a/services/users/docker-compose.yaml
+++ b/services/users/docker-compose.yaml
@@ -18,6 +18,8 @@ services:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+      keycloak-provision:
+        condition: service_completed_successfully
 
   mongo-users:
     image: mongo
