chore(keycloak): improve provisioning script and update Docker setup
- Remove redundant Keycloak startup wait logic in provision.sh.
- Rename Dockerfile to Dockerfile-keycloak.
- Add automatic 'keycloak-provision' image build in docker-compose-dev.yaml.
- Use GHCR latest image for 'keycloak-provision' in docker-compose.yaml.

--- a/infrastructure/authentication/docker-compose-dev.yaml
+++ b/infrastructure/authentication/docker-compose-dev.yaml
@@ -2,4 +2,9 @@ services:
     keycloak:
       build:
         context: .
-        dockerfile: ./infrastructure/authentication/Dockerfile
+        dockerfile: ./infrastructure/authentication/Dockerfile-keycloak
+
+    keycloak-provision:
+      build:
+        context: .
+        dockerfile: ./infrastructure/authentication/Dockerfile-keycloak-provision    
