--- a/infrastructure/authentication/docker-compose.yaml
+++ b/infrastructure/authentication/docker-compose.yaml
@@ -48,9 +48,7 @@ services:
       start_period: 600s
 
   keycloak-provision:
-    build:
-      context: .
-      dockerfile: ./infrastructure/authentication/Dockerfile-keycloak-provision
+    image: ghcr.io/eventonight/eventonight/keycloak-provision:latest
     container_name: keycloak-provision
     environment:
       KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN}
