feat(frontend-api-layer): setup api layer to make easier to setup mocked api

--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -5,12 +5,16 @@ COPY ./services/frontend/package.json ./
 RUN npm install
 COPY ./services/frontend .
 ENV NODE_ENV=production
+ARG VITE_HOST
+ENV VITE_HOST=${VITE_HOST}
 RUN npm run build
 RUN npm prune --omit=dev
 
 FROM node:25-alpine3.22
 WORKDIR /home/app
+ARG PORT
+ENV PORT=${PORT}
 COPY --from=builder /home/app/dist ./dist
 COPY --from=builder /home/app/node_modules ./node_modules
 RUN npm install -g serve@14.2.5
-ENTRYPOINT serve -s dist --no-clipboard
+ENTRYPOINT serve -s dist --no-clipboard -l ${PORT}
