--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -20,6 +20,7 @@
     "pinia": "^3.0.3",
     "quasar": "^2.18.6",
     "vue": "^3.5.22",
+    "vue-advanced-cropper": "^2.8.9",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.5.1"
   },
