chore(users): load USERS_SERVICE_SECRET via Secret
- Add Secret object to load USERS_SERVICE_SECRET from the system environment or .env file.
- Add USERS_SERVICE_SECRET as an environment variable in 'users' container.

--- a/services/users/docker-compose.yaml
+++ b/services/users/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       - PORT=${USERS_SERVICE_PORT}
       - RABBITMQ_HOST=rabbitmq
       - MONGO_HOST=mongo-users
+      - USERS_SERVICE_SECRET=${USERS_SERVICE_SECRET}
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.users.rule=Host(`users.${HOST}`)"
