--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -8,6 +8,8 @@
   },
   "scripts": {
     "dev": "vite",
+    "dev:memberView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=member_1@example.com VITE_DEV_PASSWORD=password123 vite",
+    "dev:organizationView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=organization_1@example.com VITE_DEV_PASSWORD=password123 vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
